@@ -1,3 +1,11 @@
+2010-10-18  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* soap-client.el (soap-l2fq): new function
+	(soap-wsdl-get): accept fully qualified names + doc update
+	(soap-l2wsdl): removed
+	(soap-resolve-references-for-operation): allow unnamed message
+	parts for inputs outputs and faults.
+
 2010-10-16  Alexandru Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* soap-client.el (soap-decode-any-type, soap-decode-array): decode
